--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,16 @@
         .container{
             width: 60%;
             margin: auto;
+            margin-top: 100px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>API</h1>
-        <div>1. legal_corpus.json : <a href="/api/legal">/api/legal</a></div>
-        <div>2. private_test_question.json : /api/items/&lt;int:item_id&gt;</div>
-        <a href="/api/items/1">/api/items/1</a>
-        <div>3. train_question_answer.json</div>
+        <h2>1. Các văn bản pháp luật có liên quan đến câu hỏi : <a href="/api/legal">/api/legal</a></h2>
+        <h2>2. Bộ Hỏi-Đáp : <a href="/api/qna">/api/items/1</a></h2>
+        
     </div>
 </body>
 </html>
