--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>API</h1>
+        <h1>FILE JSON</h1>
         <h2>1. Các văn bản pháp luật có liên quan đến câu hỏi : <a href="/api/legal">/api/legal</a></h2>
-        <h2>2. Bộ Hỏi-Đáp : <a href="/api/qna">/api/items/1</a></h2>
+        <h2>2. Bộ Hỏi-Đáp : <a href="/api/qna">/api/qna</a></h2>
         
     </div>
 </body>
