--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container">
         <h1>FILE JSON</h1>
-        <h2>1. Các văn bản pháp luật có liên quan đến câu hỏi : <a href="/api/legal">/api/legal</a></h2>
-        <h2>2. Bộ Hỏi-Đáp : <a href="/api/qna">/api/qna</a></h2>
+        <h2>1. <a href="/api/legal">Các văn bản pháp luật có liên quan đến câu hỏi : </a></h2>
+        <h2>2. <a href="/api/qna">Bộ Hỏi-Đáp : </a></h2>
         
     </div>
 </body>
